# cema-internship

./: .gitignore  README.md  Software engineering task.odt  presentation.odp
.github/workflows/: build.yml
backend_django/: requirements.txt
backend_django/backend_django/: settings.py  urls.py
backend_django/patientmgr/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend_django/patientmgr/migrations/: 0001_initial.py  0002_patientprogrammes_alter_patient_programmes.py  0003_rename_program_patientprogrammes_programmes_and_more.py  0004_rename_patientprogrammes_patientprogram_and_more.py  0005_alter_patientprogram_patient.py  0006_alter_patientprogram_program.py  0007_alter_patientprogram_patient.py  0008_alter_patientprogram_patient_and_more.py
frontend_qt/patientmgr_qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  patients.cpp  patients.h  patients.ui  programmes.cpp  programmes.h  programmes.ui  request.cpp  request.h
